Bug 822687 Fix 3 - Bluetooth transfer icon cut off and misaligned

--- a/apps/system/style/notifications/notifications.css
+++ b/apps/system/style/notifications/notifications.css
@@ -154,7 +154,7 @@ html, body {
   right: 0;
   top: -.2rem;
   color: #52B6CC;
-  margin: 12px 15px 0 0;
+  margin: 13px 15px 0 0;
   padding: 0;
   display: inline;
   line-height: 16px;
